src/test/ui/test-attr-non-associated-functions.stderr
error: #[test] attribute is only allowed on non associated functions
  --> $DIR/test-attr-non-associated-functions.rs:9:5
   |
LL | /     fn new() -> A { //~ ERROR #[test] attribute is only allowed on non associated functions
LL | |         A {}
LL | |     }
   | |_____^

error: aborting due to previous error

